[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://UI/Screens.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/audio/Music_Light-Puzzles.ogg" type="AudioStream" id=4]
[ext_resource path="res://UI/Background.tscn" type="PackedScene" id=5]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="StartingPosition" type="Area2D" parent="."]
position = Vector2( 220.225, 684.165 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 261.333, 637.184 )
offset = Vector2( 0, -200 )
current = true
smoothing_enabled = true
smoothing_speed = 7.0

[node name="Screens" parent="." instance=ExtResource( 2 )]

[node name="HUD" parent="." instance=ExtResource( 3 )]
layer = 100

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Background" parent="." instance=ExtResource( 5 )]
layer = -128

[node name="MusicFade" type="Tween" parent="."]
[connection signal="start_game" from="Screens" to="." method="new_game"]
